--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<script type="text/javascript">
+			codepen = window.codepen || {};
+			copepen.api = {};
+		</script>
 	</head>
 
 	<body>
