--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 
 	<head>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<script type="text/javascript">
 			codepen = window.codepen || {};
-			copepen.api = {};
+			codepen.api = {};
 		</script>
 	</head>
 
@@ -67,6 +68,7 @@
 			</div>
 
 		</div>
+		<script type="text/javascript" src="server.js"></script>
 	</body>
 
 </html>
