Adds possible solution code/markup

--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
 				<div class="signup-form">
 					<form>
 						<div class="form-row">
-							<label for="signup-name-field">Name</label>
-							<input id="signup-name-field" name="name" type="text" placeholder="Johnny Sandwiches" />
+							<label for="signup-firstname-field">First name</label>
+							<input id="signup-firstname-field" name="firstname" type="text" placeholder="Johnny" />
+						</div>
+						<div class="form-row">
+							<label for="signup-lastname-field">Last name</label>
+							<input id="signup-lastname-field" name="lastname" type="text" placeholder="Sandwiches" />
 						</div>
 						<div class="form-row">
 							<label for="signup-email-field">Email</label>
